# EmpireConqueror

./: .gitignore  CMakeLists.txt  Continente.cpp  Continente.h  Ilha.cpp  Ilha.h  Imperio.cpp  Imperio.h  Interface.cpp  Interface.h  Jogo.cpp  Jogo.h  Mundo.cpp  Mundo.h  README.md  Tecnologias.cpp  Tecnologias.h  Territorio.cpp  Territorio.h  TiposContinente.cpp  TiposContinente.h  TiposIlha.cpp  TiposIlha.h  main.cpp  mundo.txt  utils.h
src/: Continente.cpp  Continente.h  Ilha.cpp  Ilha.h  Imperio.cpp  Imperio.h  Interface.cpp  Interface.h  Jogo.cpp  Jogo.h  Mundo.cpp  Mundo.h  Tecnologias.cpp  Tecnologias.h  Territorio.cpp  Territorio.h  TiposContinente.cpp  TiposContinente.h  TiposIlha.cpp  TiposIlha.h  main.cpp  utils.h
