cmake_minimum_required(VERSION 3.17)
project(TPPOO)

set(CMAKE_CXX_STANDARD 20)

add_executable(TPPOO main.cpp Tecnologias.cpp Tecnologias.h Territorio.cpp Territorio.h Continente.cpp Continente.h Ilha.cpp Ilha.h TiposContinente.cpp TiposContinente.h TiposIlha.cpp TiposIlha.h Mundo.cpp Mundo.h Imperio.cpp Imperio.h Jogo.cpp Jogo.h Interface.cpp Interface.h utils.h)